service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: inventory

spec:
  type: ClusterIP

  selector:
    app: inventory-app

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
